# psi-assist-backend

./: .dockerignore  .env  .env.exemple  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  teste.py
html/: index.html  index.js
src/: .coverage  .coveragerc  db.sqlite3  main.py  psi_assist.spec
src/core/: settings.py  urls.py  wsgi.py
src/patients/: forms.py  models.py  urls.py  views.py
src/patients/migrations/: 0001_initial.py  0002_patient_clinical_analysis_and_more.py
src/patients/templates/patients/: patient_confirm_delete.html  patient_detail.html  patient_form.html  patient_list.html
src/psy_records/: apps.py  forms.py  models.py  urls.py  views.py
src/psy_records/migrations/: 0001_initial.py  0002_alter_psyrecord_content.py  0003_alter_psyrecord_content_alter_psyrecord_date_and_more.py
src/psy_records/static/psy_records/js/: audio_reprocess.js  recorder.js  submit.js  ui_handler.js
src/psy_records/templates/psy_records/: psyrecord_confirm_delete.html  psyrecord_detail.html  psyrecord_form.html
src/user/: admin.py  forms.py  models.py  urls.py  views.py
src/user/migrations/: 0001_initial.py  0002_alter_user_api_key_alter_user_system_prompt.py  0003_alter_user_system_prompt.py  0004_alter_user_system_prompt.py  0005_user_gemini_model_alter_user_system_prompt.py
src/user/templates/user/: login.html  password_change.html  signup.html  user_update.html
src/user/tests/: test_forms.py  test_models.py  test_views.py
