[project]
name = "psi-assist-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crispy-tailwind>=1.0.3",
    "django>=5.2.6",
    "django-crispy-forms>=2.4",
    "dotenv>=0.9.9",
    "ffmpeg-python>=0.2.0",
    "google-genai>=1.38.0",
    "pydub>=0.25.1",
    "pyinstaller>=6.16.0",
    "imageio-ffmpeg>=0.6.0"
]
