[project]
name = "psi-assist-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coverage>=7.10.7",
    "crispy-tailwind>=1.0.3",
    "django>=5.2.6",
    "django-coverage>=1.2.4",
    "django-crispy-forms>=2.4",
    "dotenv>=0.9.9",
    "google-genai>=1.38.0",
    "pyinstaller>=6.16.0",
    "gunicorn>=23.0.0",
    "whitenoise>=6.11.0",
    "psycopg2-binary>=2.9.11",
]
